--- a/javascript30-28/javascript30-28.html
+++ b/javascript30-28/javascript30-28.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="wrapper">
-    <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" loop
+    <video class="flex" width="765" height="430" src="https://www.rmp-streaming.com/media/big-buck-bunny-360p.mp4" loop
       controls></video>
     <div class="speed">
       <div class="text">1×</div>
